доработки сваггера. убрал лишнее, добавил xml
