# app/Http/Controllers/API/ProductAPIController.php
@@ -31,7 +31,7 @@ class ProductAPIController extends AppBaseController
      *
      * @SWG\Get(
      *      path="/products",
-     *      summary="Get a listing of the Products.",
+     *      summary="Получаем список всех лекарств первой необходимости.",
      *      tags={"Product"},
      *      description="Get all Products",
      *      produces={"application/json"},
@@ -68,44 +68,7 @@ class ProductAPIController extends AppBaseController
         return $this->sendResponse($products->toArray(), 'Products retrieved successfully');
     }
 
-    /**
-     * @param CreateProductAPIRequest $request
-     * @return Response
-     *
-     * @SWG\Post(
-     *      path="/products",
-     *      summary="Store a newly created Product in storage",
-     *      tags={"Product"},
-     *      description="Store Product",
-     *      produces={"application/json"},
-     *      @SWG\Parameter(
-     *          name="body",
-     *          in="body",
-     *          description="Product that should be stored",
-     *          required=false,
-     *          @SWG\Schema(ref="#/definitions/Product")
-     *      ),
-     *      @SWG\Response(
-     *          response=200,
-     *          description="successful operation",
-     *          @SWG\Schema(
-     *              type="object",
-     *              @SWG\Property(
-     *                  property="success",
-     *                  type="boolean"
-     *              ),
-     *              @SWG\Property(
-     *                  property="data",
-     *                  ref="#/definitions/Product"
-     *              ),
-     *              @SWG\Property(
-     *                  property="message",
-     *                  type="string"
-     *              )
-     *          )
-     *      )
-     * )
-     */
+
     public function store(CreateProductAPIRequest $request)
     {
         $input = $request->all();
@@ -115,44 +78,7 @@ class ProductAPIController extends AppBaseController
         return $this->sendResponse($product->toArray(), 'Product saved successfully');
     }
 
-    /**
-     * @param int $id
-     * @return Response
-     *
-     * @SWG\Get(
-     *      path="/products/{id}",
-     *      summary="Display the specified Product",
-     *      tags={"Product"},
-     *      description="Get Product",
-     *      produces={"application/json"},
-     *      @SWG\Parameter(
-     *          name="id",
-     *          description="id of Product",
-     *          type="integer",
-     *          required=true,
-     *          in="path"
-     *      ),
-     *      @SWG\Response(
-     *          response=200,
-     *          description="successful operation",
-     *          @SWG\Schema(
-     *              type="object",
-     *              @SWG\Property(
-     *                  property="success",
-     *                  type="boolean"
-     *              ),
-     *              @SWG\Property(
-     *                  property="data",
-     *                  ref="#/definitions/Product"
-     *              ),
-     *              @SWG\Property(
-     *                  property="message",
-     *                  type="string"
-     *              )
-     *          )
-     *      )
-     * )
-     */
+
     public function show($id)
     {
         /** @var Product $product */
@@ -165,52 +91,7 @@ class ProductAPIController extends AppBaseController
         return $this->sendResponse($product->toArray(), 'Product retrieved successfully');
     }
 
-    /**
-     * @param int $id
-     * @param UpdateProductAPIRequest $request
-     * @return Response
-     *
-     * @SWG\Put(
-     *      path="/products/{id}",
-     *      summary="Update the specified Product in storage",
-     *      tags={"Product"},
-     *      description="Update Product",
-     *      produces={"application/json"},
-     *      @SWG\Parameter(
-     *          name="id",
-     *          description="id of Product",
-     *          type="integer",
-     *          required=true,
-     *          in="path"
-     *      ),
-     *      @SWG\Parameter(
-     *          name="body",
-     *          in="body",
-     *          description="Product that should be updated",
-     *          required=false,
-     *          @SWG\Schema(ref="#/definitions/Product")
-     *      ),
-     *      @SWG\Response(
-     *          response=200,
-     *          description="successful operation",
-     *          @SWG\Schema(
-     *              type="object",
-     *              @SWG\Property(
-     *                  property="success",
-     *                  type="boolean"
-     *              ),
-     *              @SWG\Property(
-     *                  property="data",
-     *                  ref="#/definitions/Product"
-     *              ),
-     *              @SWG\Property(
-     *                  property="message",
-     *                  type="string"
-     *              )
-     *          )
-     *      )
-     * )
-     */
+
     public function update($id, UpdateProductAPIRequest $request)
     {
         $input = $request->all();
@@ -227,44 +108,7 @@ class ProductAPIController extends AppBaseController
         return $this->sendResponse($product->toArray(), 'Product updated successfully');
     }
 
-    /**
-     * @param int $id
-     * @return Response
-     *
-     * @SWG\Delete(
-     *      path="/products/{id}",
-     *      summary="Remove the specified Product from storage",
-     *      tags={"Product"},
-     *      description="Delete Product",
-     *      produces={"application/json"},
-     *      @SWG\Parameter(
-     *          name="id",
-     *          description="id of Product",
-     *          type="integer",
-     *          required=true,
-     *          in="path"
-     *      ),
-     *      @SWG\Response(
-     *          response=200,
-     *          description="successful operation",
-     *          @SWG\Schema(
-     *              type="object",
-     *              @SWG\Property(
-     *                  property="success",
-     *                  type="boolean"
-     *              ),
-     *              @SWG\Property(
-     *                  property="data",
-     *                  type="string"
-     *              ),
-     *              @SWG\Property(
-     *                  property="message",
-     *                  type="string"
-     *              )
-     *          )
-     *      )
-     * )
-     */
+
     public function destroy($id)
     {
         /** @var Product $product */
