# app/Http/Controllers/API/StateAPIController.php
@@ -25,38 +25,7 @@ class StateAPIController extends AppBaseController
         $this->stateRepository = $stateRepo;
     }
 
-    /**
-     * @param Request $request
-     * @return Response
-     *
-     * @SWG\Get(
-     *      path="/states",
-     *      summary="Get a listing of the States.",
-     *      tags={"State"},
-     *      description="Get all States",
-     *      produces={"application/json"},
-     *      @SWG\Response(
-     *          response=200,
-     *          description="successful operation",
-     *          @SWG\Schema(
-     *              type="object",
-     *              @SWG\Property(
-     *                  property="success",
-     *                  type="boolean"
-     *              ),
-     *              @SWG\Property(
-     *                  property="data",
-     *                  type="array",
-     *                  @SWG\Items(ref="#/definitions/State")
-     *              ),
-     *              @SWG\Property(
-     *                  property="message",
-     *                  type="string"
-     *              )
-     *          )
-     *      )
-     * )
-     */
+
     public function index(Request $request)
     {
         $states = $this->stateRepository->all(
@@ -68,44 +37,7 @@ class StateAPIController extends AppBaseController
         return $this->sendResponse($states->toArray(), 'States retrieved successfully');
     }
 
-    /**
-     * @param CreateStateAPIRequest $request
-     * @return Response
-     *
-     * @SWG\Post(
-     *      path="/states",
-     *      summary="Store a newly created State in storage",
-     *      tags={"State"},
-     *      description="Store State",
-     *      produces={"application/json"},
-     *      @SWG\Parameter(
-     *          name="body",
-     *          in="body",
-     *          description="State that should be stored",
-     *          required=false,
-     *          @SWG\Schema(ref="#/definitions/State")
-     *      ),
-     *      @SWG\Response(
-     *          response=200,
-     *          description="successful operation",
-     *          @SWG\Schema(
-     *              type="object",
-     *              @SWG\Property(
-     *                  property="success",
-     *                  type="boolean"
-     *              ),
-     *              @SWG\Property(
-     *                  property="data",
-     *                  ref="#/definitions/State"
-     *              ),
-     *              @SWG\Property(
-     *                  property="message",
-     *                  type="string"
-     *              )
-     *          )
-     *      )
-     * )
-     */
+
     public function store(CreateStateAPIRequest $request)
     {
         $input = $request->all();
@@ -115,44 +47,7 @@ class StateAPIController extends AppBaseController
         return $this->sendResponse($state->toArray(), 'State saved successfully');
     }
 
-    /**
-     * @param int $id
-     * @return Response
-     *
-     * @SWG\Get(
-     *      path="/states/{id}",
-     *      summary="Display the specified State",
-     *      tags={"State"},
-     *      description="Get State",
-     *      produces={"application/json"},
-     *      @SWG\Parameter(
-     *          name="id",
-     *          description="id of State",
-     *          type="integer",
-     *          required=true,
-     *          in="path"
-     *      ),
-     *      @SWG\Response(
-     *          response=200,
-     *          description="successful operation",
-     *          @SWG\Schema(
-     *              type="object",
-     *              @SWG\Property(
-     *                  property="success",
-     *                  type="boolean"
-     *              ),
-     *              @SWG\Property(
-     *                  property="data",
-     *                  ref="#/definitions/State"
-     *              ),
-     *              @SWG\Property(
-     *                  property="message",
-     *                  type="string"
-     *              )
-     *          )
-     *      )
-     * )
-     */
+
     public function show($id)
     {
         /** @var State $state */
@@ -165,52 +60,7 @@ class StateAPIController extends AppBaseController
         return $this->sendResponse($state->toArray(), 'State retrieved successfully');
     }
 
-    /**
-     * @param int $id
-     * @param UpdateStateAPIRequest $request
-     * @return Response
-     *
-     * @SWG\Put(
-     *      path="/states/{id}",
-     *      summary="Update the specified State in storage",
-     *      tags={"State"},
-     *      description="Update State",
-     *      produces={"application/json"},
-     *      @SWG\Parameter(
-     *          name="id",
-     *          description="id of State",
-     *          type="integer",
-     *          required=true,
-     *          in="path"
-     *      ),
-     *      @SWG\Parameter(
-     *          name="body",
-     *          in="body",
-     *          description="State that should be updated",
-     *          required=false,
-     *          @SWG\Schema(ref="#/definitions/State")
-     *      ),
-     *      @SWG\Response(
-     *          response=200,
-     *          description="successful operation",
-     *          @SWG\Schema(
-     *              type="object",
-     *              @SWG\Property(
-     *                  property="success",
-     *                  type="boolean"
-     *              ),
-     *              @SWG\Property(
-     *                  property="data",
-     *                  ref="#/definitions/State"
-     *              ),
-     *              @SWG\Property(
-     *                  property="message",
-     *                  type="string"
-     *              )
-     *          )
-     *      )
-     * )
-     */
+
     public function update($id, UpdateStateAPIRequest $request)
     {
         $input = $request->all();
@@ -227,44 +77,7 @@ class StateAPIController extends AppBaseController
         return $this->sendResponse($state->toArray(), 'State updated successfully');
     }
 
-    /**
-     * @param int $id
-     * @return Response
-     *
-     * @SWG\Delete(
-     *      path="/states/{id}",
-     *      summary="Remove the specified State from storage",
-     *      tags={"State"},
-     *      description="Delete State",
-     *      produces={"application/json"},
-     *      @SWG\Parameter(
-     *          name="id",
-     *          description="id of State",
-     *          type="integer",
-     *          required=true,
-     *          in="path"
-     *      ),
-     *      @SWG\Response(
-     *          response=200,
-     *          description="successful operation",
-     *          @SWG\Schema(
-     *              type="object",
-     *              @SWG\Property(
-     *                  property="success",
-     *                  type="boolean"
-     *              ),
-     *              @SWG\Property(
-     *                  property="data",
-     *                  type="string"
-     *              ),
-     *              @SWG\Property(
-     *                  property="message",
-     *                  type="string"
-     *              )
-     *          )
-     *      )
-     * )
-     */
+
     public function destroy($id)
     {
         /** @var State $state */
